Updates because of security vulnerabilities & dependencies

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "description": "JavaScript wrappers running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^6.2.0",
     "@types/fetch-mock": "^7.3.1",
     "@types/jasmine": "^2.8.2",
     "@types/node": "^6.14.4",
@@ -16,7 +17,7 @@
     "coveralls": "^3.0.4",
     "cpx": "^1.5.0",
     "cross-spawn": "^5.1.0",
-    "cz-lerna-changelog": "github:patrickarlt/cz-lerna-changelog#3fe7650a2e2e624b1f46e5031c96119759698288",
+    "cz-lerna-changelog": "^2.0.2",
     "date-fns": "^1.29.0",
     "event-stream": "3.3.4",
     "fetch-mock": "^7.3.3",
@@ -37,22 +38,24 @@
     "karma-spec-reporter": "0.0.32",
     "karma-typescript": "^4.0.0",
     "karma-typescript-es6-transform": "^4.0.0",
-    "lerna": "^2.5.1",
+    "lerna": "^3.16.4",
     "lint-staged": "^4.3.0",
+    "marked": "^0.6.0",
     "minimatch": "^3.0.4",
     "node-sass": "^4.9.0",
-    "onchange": "^3.3.0",
+    "onchange": "^6.0.0",
     "prettier": "^1.17.0",
     "resolve": "^1.5.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.68.0",
     "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-filesize": "^5.0.1",
-    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-filesize": "^6.1.1",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^3.0.3",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.21.0",
     "rollup-plugin-uglify": "^3.0.0",
+    "semantic-release": "^15.13.19",
     "shelljs": "^0.7.8",
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
